--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
+    "prisma": "^4.5.0",
     "tailwindcss": "^3.2.4"
   }
 }
