--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-responsive-masonry": "^2.1.6",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
