--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.16.1",
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
     "react-responsive-masonry": "^2.1.6",
     "recoil": "^0.7.6",
     "swr": "^1.3.0"
